feat: upgrade to Java 25
Signed-off-by: Anthony Petrov <anthony@swirldslabs.com>